--- a/src/content/docs/kmom/kmom03.mdx
+++ b/src/content/docs/kmom/kmom03.mdx
@@ -17,11 +17,10 @@ import { Aside } from '@astrojs/starlight/components';
 
 <Aside type="caution">Kursmaterial är under utveckling. Påbörja inte kursmomentet så länge denna gula rutan finns.</Aside>
 
-I detta kursmoment fortsätter vi med att utveckla våra GUI komponenter från tidigare kursmoment. Vi skapar lättanvända formulärfält med hjälp av HTML5 och kopplar ihop fälten i formulär som är lätta att använda på små skärmar där kontext och möjligheten att skriva snabbt och enkelt saknas. I vår applikation lägger vi till möjligheten att skapa data via formulär.
+Vi fortsätter med Lager appen och lägger till en funktion för att skapa fakturor utifrån en order. Alla ska inte kunna skapa fakturor så innan vi skapar faktura funktionen skapar vi inloggning och tittar på JSON Web Tokens för autentisering. När man skapar en faktura är det bra att ha snygga och responsiva tabeller, så det ska vi självklart fixa till
 
 Så här kan det se ut när vi är klara.
 
-<YouTube posterQuality="max" id="2yNeTAMh2Jg" />
 
 
 
@@ -46,16 +45,12 @@ Veckans genomgång
 
 Emil har genomgånger tisdagar kl 13:15, efter genomgången uppdateras denna delen av sidan med veckans genomgång.
 
-<YouTube posterQuality="max" id="w-vjKU5tucg" />
-
 
 
 Veckans föreläsning 
 ---------------------------------
 
 Emil har föreläsningar onsdagar kl 13:15, efter föreläsningen uppdateras denna delen av sidan med veckans föreläsning.
-
-<YouTube posterQuality="max" id="sZDvUQbFnTk" />
 
 
 
@@ -71,12 +66,6 @@ Läs och använd artiklarna [Website Forms Usability: Top 10 Recommendations](ht
 
 
 
-### Video 
-
-1. Det finns en [videoserie](https://www.youtube.com/playlist?list=PLKtP9l5q3ce_CbhJOudHjxkjYofM98kvh) kopplat till kursen, titta på videos som börjar på 3.
-
-
-
 Övningar & Uppgifter 
 -------------------------------------------
 
@@ -88,7 +77,11 @@ Läs och använd artiklarna [Website Forms Usability: Top 10 Recommendations](ht
 
 Gör följande övning för att träna inför uppgifterna.
 
-1. Läs igenom artikeln och gör övningarna i "[Ett mobilanpassad formulär](/kunskap/ett-mobilanpassad-formular)". Skriv koden i webapp-lager repot för återanvändning i uppgiften.
+1. Gör övningen [Tabeller i mobila enheter](/kunskap/tabeller-i-mobila-enheter). Spara eventuella filer i ditt webapp-lager repo.
+
+1. Gör övningen [Login med JWT](/kunskap/login-med-jwt). Spara eventuella filer i ditt webapp-lager repo.
+
+1. Gör övningen [Content Security Policy](/kunskap/content-security-policy). Spara eventuella filer i ditt webapp-lager repo.
 
 
 
@@ -107,7 +100,7 @@ Resultat & Redovisning
 
 Se till att följande frågor besvaras i redovisningstexten i din inlämning.
 
-* Vilka faktorer spelar in när du ska designa ett formulär för mobila enheter?
-* Vad tyckte du om den inbyggda formulär validering i webbläsaren?
-* Vilka lärdomar gjorde du kring hantering av formulär i JavaScript?
+* Vilka utmaningar finns med tabeller i mobila enheter?
+* Vilka fördelar finns med JWT?
+* Hur använde du din kunskap från tidigare kursmoment för att göra inloggningsformuläret?
 * Vilken är din TIL för detta kmom?
