--- a/src/content/docs/kunskap/tabeller-i-mobila-enheter.mdx
+++ b/src/content/docs/kunskap/tabeller-i-mobila-enheter.mdx
@@ -10,51 +10,106 @@ revision:
 
 Tabeller används i stor utsträckning i affärssystem och andra administrationsgränssnitt. Ofta är dessa applikationer för desktop användare, men med tanke på i hur stor utsträckning mobila enheter används är det bra om tabeller även designas för små enheter. Det stora problemet med tabeller är ofta att det är mycket data på liten yta, som blir än mindre på en mobil enhet. Vi ska i denna övning titta på två sätt för att designa tabeller för mobila enheter.
 
+## En tabell att börja med
 
-
-
-
-
-
-En tabell att börja med
---------------------------------------
 Vi börjar med nedanstående tabell och redan här i övningen ser vi problemet. Det finns inte tillräckligt mycket plats för att visa tabellen utan radbrytningar i cellerna.
 
 <table>
-<thead>
-<tr><th>Artikelnr.</th><th>Namn</th><th>Beskrivning</th><th>Lagersaldo</th><th>Lagerplats</th></tr>
-</thead>
-<tbody>
-<tr><td>14-RNT</td><td>Skruv M14</td><td>Skruv M14, värmförsinkad</td><td>12</td><td>A1B4</td></tr>
-<tr><td>12-RNT</td><td>Skruv M12</td><td>Skruv M12, värmförsinkad</td><td>14</td><td>A1B5</td></tr>
-<tr><td>10-RNT</td><td>Skruv M10</td><td>Skruv M10, värmförsinkad</td><td>20</td><td>A1B6</td></tr>
-<tr><td>08-RNT</td><td>Skruv M8</td><td>Skruv M8, värmförsinkad</td><td>2</td><td>A1B7</td></tr>
-<tr><td>06-RNT</td><td>Skruv M6</td><td>Skruv M6, värmförsinkad</td><td>6</td><td>A1B8</td></tr>
-<tr><td>14-TNT</td><td>Mutter M14</td><td>Mutter M14, värmförsinkad, passar 1214-RNT</td><td>13</td><td>A1C4</td></tr>
-<tr><td>12-TNT</td><td>Mutter M12</td><td>Mutter M12, värmförsinkad, passar 1212-RNT</td><td>23</td><td>A1C4</td></tr>
-<tr><td>10-TNT</td><td>Mutter M10</td><td>Mutter M10, värmförsinkad, passar 1210-RNT</td><td>12</td><td>A1C4</td></tr>
-<tr><td>08-TNT</td><td>Mutter M8</td><td>Mutter M8, värmförsinkad, passar 1208-RNT</td><td>4</td><td>A1C4</td></tr>
-<tr><td>06-TNT</td><td>Mutter M6</td><td>Mutter M6, värmförsinkad, passar 1206-RNT</td><td>1</td><td>A1C4</td></tr>
-</tbody>
+  <thead>
+    <tr>
+      <th>Artikelnr.</th>
+      <th>Namn</th>
+      <th>Beskrivning</th>
+      <th>Lagersaldo</th>
+      <th>Lagerplats</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>14-RNT</td>
+      <td>Skruv M14</td>
+      <td>Skruv M14, värmförsinkad</td>
+      <td>12</td>
+      <td>A1B4</td>
+    </tr>
+    <tr>
+      <td>12-RNT</td>
+      <td>Skruv M12</td>
+      <td>Skruv M12, värmförsinkad</td>
+      <td>14</td>
+      <td>A1B5</td>
+    </tr>
+    <tr>
+      <td>10-RNT</td>
+      <td>Skruv M10</td>
+      <td>Skruv M10, värmförsinkad</td>
+      <td>20</td>
+      <td>A1B6</td>
+    </tr>
+    <tr>
+      <td>08-RNT</td>
+      <td>Skruv M8</td>
+      <td>Skruv M8, värmförsinkad</td>
+      <td>2</td>
+      <td>A1B7</td>
+    </tr>
+    <tr>
+      <td>06-RNT</td>
+      <td>Skruv M6</td>
+      <td>Skruv M6, värmförsinkad</td>
+      <td>6</td>
+      <td>A1B8</td>
+    </tr>
+    <tr>
+      <td>14-TNT</td>
+      <td>Mutter M14</td>
+      <td>Mutter M14, värmförsinkad, passar 1214-RNT</td>
+      <td>13</td>
+      <td>A1C4</td>
+    </tr>
+    <tr>
+      <td>12-TNT</td>
+      <td>Mutter M12</td>
+      <td>Mutter M12, värmförsinkad, passar 1212-RNT</td>
+      <td>23</td>
+      <td>A1C4</td>
+    </tr>
+    <tr>
+      <td>10-TNT</td>
+      <td>Mutter M10</td>
+      <td>Mutter M10, värmförsinkad, passar 1210-RNT</td>
+      <td>12</td>
+      <td>A1C4</td>
+    </tr>
+    <tr>
+      <td>08-TNT</td>
+      <td>Mutter M8</td>
+      <td>Mutter M8, värmförsinkad, passar 1208-RNT</td>
+      <td>4</td>
+      <td>A1C4</td>
+    </tr>
+    <tr>
+      <td>06-TNT</td>
+      <td>Mutter M6</td>
+      <td>Mutter M6, värmförsinkad, passar 1206-RNT</td>
+      <td>1</td>
+      <td>A1C4</td>
+    </tr>
+  </tbody>
 </table>
 
 Jag har gjort i ordning en enkel hemsida som endast innehåller samma `main.container`, som vi använder i tidigare kursmoment och tabellen. Om vi tittar på denna sida i mobilen ser vi ännu mindre av tabellen. Vi noterar även att det nu går att scrolla hela sidan i sidled något vi vill försöka undvika på mobiler då det försvårar navigation. Så målet för de två designs vi gör är **inga radbrytningar i celler** och **tabellen får inte vara bredare än skärmen på mobila enheter**.
 
 ![image/webapp/screenshot-table-no-style.png](https://dbwebb.se/image/webapp/screenshot-table-no-style.png)
 
+## Metod 1: Scroll i sidled för tabellen
 
+Vi börjar med radbrytningarna då det är enkelt att åtgärda. Vi definierar klassen `.table` och använder attributet `white-space` med värdet `nowrap`, detta gör att vi inte får radbrytningar i `th` och `td` elementen.
 
-Metod 1: Scroll i sidled för tabellen
---------------------------------------
-Vi börjar med radbrytningarna då det är enkelt att åtgärda. Vi definierar klassen `.table` och använder oss av möjligheten för att skriva 'nested' SASS kod, se [dokumentationen](http://sass-lang.com/documentation/file.SASS_REFERENCE.html#nested_rules) för mer information. Vi använder attributet `white-space` med värdet `nowrap`, detta gör att vi inte får radbrytningar i `th` och `td` elementen.
-
-```scss
-.table {
-
-    th,
-    td {
-        white-space: nowrap;
-    }
+```css
+.table th,
+.table td {
+  white-space: nowrap;
 }
 ```
 
@@ -62,15 +117,15 @@ Då all data inte får plats i sidled vill vi sätta max bredden till 100% och s
 
 ```scss
 .table {
-    box-sizing: border-box;
-    max-width: 100%;
-    display: block;
-    overflow-x: auto;
+  box-sizing: border-box;
+  max-width: 100%;
+  display: block;
+  overflow-x: auto;
+}
 
-    th,
-    td {
-        white-space: nowrap;
-    }
+.table th,
+.table td {
+  white-space: nowrap;
 }
 ```
 
@@ -78,78 +133,29 @@ Nu har vi klarat av våra två mål: Vi har inga radbrytningar och tabellen är 
 
 ```scss
 .table {
-    box-sizing: border-box;
-    width: 100%;
-    display: block;
-    overflow-x: auto;
-    border-collapse: collapse;
-
-    th {
-        text-align: left;
-    }
-
-    td {
-        border-top: 1px solid #ccc;
-    }
-
-    th,
-    td {
-        white-space: nowrap;
-        padding: 0.2rem 0.8rem;
-    }
-
-    .number-cell {
-        text-align: right;
-    }
-}
-
-.table-striped {
-    tr:nth-of-type(2n) {
-        background-color: #eee;
-    }
-}
-```
-
-Jag har i exemplet ovan lagt till två stycken hjälpklasser `.table-striped` och `.number-cell`. `.table-striped` lägger till färg på varannan rad med hjälp av pseudo-klassen `:nth-of-type`. `.number-cell` högerställer texten i cellen för kolumner med, kan vara bra att ha för celler med numeriska värden. Nedan visas tabellen med klasserna `table.table.table-striped`.
-
-![image/webapp/screenshot-table-scroll.png](https://dbwebb.se/image/webapp/screenshot-table-scroll.png)
-
-För att förbereda för metod 2 bryter vi ut delen som har med scrollningen i sidled till klassen `.table-scroll`. Detta gör att vi kan återanvända den generella stylingen för tabellerna, men beroende på vilken klass vi ger förutom `.table` ge olika beteenden för små enheter.
-
-```scss
-.table-scroll {
-    width: 100%;
-    display: block;
-    overflow-x: auto;
-}
-```
-
-För att se vilken effekt 'nested' SASS kod kan ge är här nedan CSS filen som skapas med kommandot `sass base.css style.css --style expanded`, vilket är den stilen som är mest lik läsbar CSS kod.
-
-```css
-.table {
   box-sizing: border-box;
+  width: 100%;
+  display: block;
+  overflow-x: auto;
   border-collapse: collapse;
 }
+
 .table th {
   text-align: left;
 }
+
 .table td {
   border-top: 1px solid #ccc;
 }
+
 .table th,
 .table td {
   white-space: nowrap;
   padding: 0.2rem 0.8rem;
 }
+
 .table .number-cell {
   text-align: right;
-}
-
-.table-scroll {
-  width: 100%;
-  display: block;
-  overflow-x: auto;
 }
 
 .table-striped tr:nth-of-type(2n) {
@@ -157,38 +163,50 @@ För att se vilken effekt 'nested' SASS kod kan ge är här nedan CSS filen som 
 }
 ```
 
+Jag har i exemplet ovan lagt till två stycken hjälpklasser `.table-striped` och `.number-cell`. `.table-striped` lägger till färg på varannan rad med hjälp av pseudo-klassen `:nth-of-type`. `.number-cell` högerställer texten i cellen för kolumner med, kan vara bra att ha för celler med numeriska värden. Nedan visas tabellen med klasserna `.table.table-striped`.
 
+![image/webapp/screenshot-table-scroll.png](https://dbwebb.se/image/webapp/screenshot-table-scroll.png)
 
-Metod 2: Stack
---------------------------------------
+För att förbereda för metod 2 bryter vi ut delen som har med scrollningen i sidled till klassen `.table-scroll`. Detta gör att vi kan återanvända den generella stylingen för tabellerna, men beroende på vilken klass vi ger förutom `.table` ge olika beteenden för små enheter.
+
+```scss
+.table-scroll {
+  width: 100%;
+  display: block;
+  overflow-x: auto;
+}
+```
+
+## Metod 2: Stack
+
 Ett annat sätt att visa all data är att vända på tabellen och att istället för att visa data i kolumner visa det som rader. Detta fungerar då vi har mycket plats neråt och kan stapla raderna på varandra. Vi definierar en ny klass `.table-stacked`, som får ta hand om att stapla tabellen för små enheter. Vi använder därför ett breakpoint och en media-query för att få till staplingen av rader.
 
 Först sätter vi `display: block;` för `table`, `tr` och `td` elementen, vi vill inte att några av dessa element ska visas som tabell-element. Vi flyttar bort kolumnnamnen utanför skärmen med attributet `position: absolute;` och stora negativa värden. Vi använder inte `display: none;` ur ett tillgänglighetsperspektiv, vi vill fortfarande att personer med skärmläsare (screen readers) kan få uppläst kolumnnamnen.
 
 ```scss
 @media only screen and (max-width: 668px) {
-    .table-stacked {
-        display: block;
+  .table-stacked {
+    display: block;
+  }
 
-        tr {
-            display: block;
-        }
+  .table-stacked tr {
+    display: block;
+  }
 
-        // We do not use display: none; for accessibility reasons
-        thead tr {
-            position: absolute;
-            top: -9999px;
-            left: -9999px;
-        }
+  // We do not use display: none; for accessibility reasons
+  .table-stacked thead tr {
+    position: absolute;
+    top: -9999px;
+    left: -9999px;
+  }
 
-        tbody {
-            display: block;
-        }
+  .table-stacked tbody {
+    display: block;
+  }
 
-        td {
-            display: block;
-        }
-    }
+  .table-stacked td {
+    display: block;
+  }
 }
 ```
 
@@ -196,30 +214,30 @@ Nästa steg blir att flytta alla `td`-element ut till höger och i och med vi ha
 
 ```scss
 @media only screen and (max-width: 668px) {
-    .table-stacked {
-        display: block;
+  .table-stacked {
+    display: block;
+  }
 
-        tr {
-            display: block;
-        }
+  .table-stacked tr {
+    display: block;
+  }
 
-        // We do not use display: none; for accessibility reasons
-        thead tr {
-            position: absolute;
-            top: -9999px;
-            left: -9999px;
-        }
+  // We do not use display: none; for accessibility reasons
+  .table-stacked thead tr {
+    position: absolute;
+    top: -9999px;
+    left: -9999px;
+  }
 
-        td {
-            display: block;
-            border: none;
-            border-bottom: 1px solid #eee;
-            position: relative;
-            padding-left: 50%;
-            white-space: normal;
-            text-align:right;
-        }
-    }
+  .table-stacked td {
+    display: block;
+    border: none;
+    border-bottom: 1px solid #eee;
+    position: relative;
+    padding-left: 50%;
+    white-space: normal;
+    text-align: right;
+  }
 }
 ```
 
@@ -227,11 +245,11 @@ Sista steget är att använda ett data-attribut för att visa kolumnnamnen väns
 
 ```html
 <tr>
-    <td data-title="Artikelnr">14-RNT</td>
-    <td data-title="Namn">Skruv M14</td>
-    <td data-title="Beskrivning">Skruv M14, värmförsinkad</td>
-    <td data-title="Lagersaldo" class="number-cell">12</td>
-    <td data-title="Lagerplats">A1B4</td>
+  <td data-title="Artikelnr">14-RNT</td>
+  <td data-title="Namn">Skruv M14</td>
+  <td data-title="Beskrivning">Skruv M14, värmförsinkad</td>
+  <td data-title="Lagersaldo" class="number-cell">12</td>
+  <td data-title="Lagerplats">A1B4</td>
 </tr>
 ```
 
@@ -239,44 +257,44 @@ Vi använder `position: absolute;` för att placera ut kolumnnamnen och `content
 
 ```scss
 @media only screen and (max-width: 668px) {
-    .table-stacked {
-        display: block;
+  .table-stacked {
+    display: block;
+  }
 
-        tr {
-            display: block;
-        }
+  .table-stacked tr {
+    display: block;
+  }
 
-        // We do not use display: none; for accessibility reasons
-        thead tr {
-            position: absolute;
-            top: -9999px;
-            left: -9999px;
-        }
+  // We do not use display: none; for accessibility reasons
+  .table-stacked thead tr {
+    position: absolute;
+    top: -9999px;
+    left: -9999px;
+  }
 
-        td {
-            display: block;
-            border: none;
-            border-bottom: 1px solid #eee;
-            position: relative;
-            padding-left: 50%;
-            white-space: normal;
-            text-align:right;
-        }
+  .table-stacked td {
+    display: block;
+    border: none;
+    border-bottom: 1px solid #eee;
+    position: relative;
+    padding-left: 50%;
+    white-space: normal;
+    text-align: right;
+  }
 
-        td:before {
-            /* För att visa tabell rubrik */
-            content: attr(data-title);
-            /* Använder top och left för efterlikna padding */
-            position: absolute;
-            top: 0.33rem;
-            left: 0.33rem;
-            width: 45%;
-            padding-right: 0.55rem;
-            white-space: nowrap;
-            text-align:left;
-            font-weight: bold;
-        }
-    }
+  .table-stacked td:before {
+    /* För att visa tabell rubrik */
+    content: attr(data-title);
+    /* Använder top och left för efterlikna padding */
+    position: absolute;
+    top: 0.33rem;
+    left: 0.33rem;
+    width: 45%;
+    padding-right: 0.55rem;
+    white-space: nowrap;
+    text-align: left;
+    font-weight: bold;
+  }
 }
 ```
 
@@ -284,18 +302,14 @@ Tabellen `table.table.table-striped.table-stacked` ser nu ut som nedanstående t
 
 ![image/webapp/screenshot-table-stacked.png](https://dbwebb.se/image/webapp/screenshot-table-stacked.png)
 
+## Bonus
 
-
-Bonus
---------------------------------------
 Istället för att visa all data i tabellen kan du som utvecklare/designer göra ett medvetet val att bara visa en del av data. Att helt enkelt välja att fokusera på de kolumner som är viktiga för precis denna vy istället för att alltid bara göra en spegling av databasen.
 
 Exempel på detta är de två listor vi har gjort i kursmoment 1 och 2. I lagersaldo listan visar vi bara namn och antal. I plocklistan bara namn, antal och plats. Så på med designar hatten (kanske en designer har keps? eller varför inte en '[Blue Beanie](http://bluebeanieday.tumblr.com)') och gör ett medvetet val om vad som behöver visas för att skapa en enkel och lätt användbar tabell.
 
+## Avslutningsvis
 
-
-Avslutningsvis
---------------------------------------
 Vi har i denna artikel tittat på två sätt (+ ett bonus sätt) att visa data i tabeller för mobila enheter. Att visa mycket data på liten yta är aldrig lätt, men ovan finns två sätt som underlättar när vi gör responsiv design för mobila enheter.
 
 Exempelprogrammet från denna övning finns i [webapp-example/sass-examples](https://github.com/dbwebb-webapp/webapp-example/tree/main/sass-examples).
